plin plon plin | DB

--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -18,16 +18,16 @@ Este protocolo requiere que todas las transacciones hagan sus solicitudes de blo
 1. **Fase de crecimiento**: Una transacción puede obtener bloqueos, pero no puede liberar ninguno.
 2. **Fase de encogimiento**: Una transacción puede liberar bloqueos, pero no puede solicitar ninguno nuevo.
 
-Este protocolo garantiza la serializabilidad en conflictos. Sin embargo, no previene la aparición de interbloqueos. Otro problema que puede surgir con este protocolo es el ***retroceso en cascada*** de varias transacciones, esto ocurre debido a las ***lecturas no comprometidas*** o lecturas sucias (dirty reads), donde una transacción puede leer datos modificados por otra transacción que aún no ha sido comprometida. Para solucionar este problema se puede implementar un protocolo de bloqueo riguroso en dos faces, el cual bloquea todos los registros que va a utilizar en modo exclusivo y libera los bloqueos únicamente cuando la transacción se compromete. Esta estrategia se conoce como ***Read Committed*** y evita que las transacciones lean datos que no han sido definitivamente guardados en la base de datos.
+Este protocolo garantiza la serializabilidad en conflictos. Sin embargo, no previene la aparición de interbloqueos. Otro problema que puede surgir con este protocolo es el ***retroceso en cascada*** de varias transacciones, esto ocurre debido a las ***lecturas no comprometidas*** o lecturas sucias (dirty reads), donde una transacción puede leer datos modificados por otra transacción que aún no ha sido comprometida. Para solucionar este problema se puede implementar un protocolo de bloqueo riguroso en dos fases, el cual bloquea todos los registros que va a utilizar en modo exclusivo y libera los bloqueos únicamente cuando la transacción se compromete. Esta estrategia se conoce como ***Read Committed*** y evita que las transacciones lean datos que no han sido definitivamente guardados en la base de datos.
 Aunque esta técnica reduce los retrocesos en cascada, también disminuye la concurrencia, ya que algunas transacciones pueden quedar en la espera de ciertos recursos. Las ***conversiones de modos de bloqueo*** en una técnica alternativa que aumenta la concurrencia en las bases de datos, puesto que existen transacciones que solo necesitan un bloqueo exclusivo al final de su ejecución. Esto introduce al protocolo dos nuevos métodos:
 - **Upgrade**: Conversión de un bloqueo en modo compartido a un bloqueo exclusivo.
 - **Downgrade**: Conversión de un bloqueo exclusivo a un bloqueo en modo compartido.
 
 Es importante tener en cuenta que el **upgrade** solo puede realizarse durante la fase de crecimiento del protocolo de bloqueo en dos fases, mientras que el **downgrade** solo puede realizarse durante la fase de encogimiento. Además, si una transacción intenta un **upgrade** en un recurso $Q$, puede verse obligada a esperar si otra transacción ya tiene un bloqueo compartido en $Q$.
 ### Protocolo Basados en Grafos
-El protocolo de bloqueo de dos fases es necesario para asegurar la secuencialidad en ausencia de información sobre el acceso a los datos. Sin embargo, con información adicional sobre el orden de acceso, se pueden desarrollar protocolos alternativos.
+El protocolo de bloqueo de dos fases es necesario para asegurar la serializabilidad en ausencia de información sobre el acceso a los datos. Sin embargo, con información adicional sobre el orden de acceso, se pueden desarrollar protocolos alternativos.
 El modelo más simple exige que se tenga un conocimiento sobre el orden al que se accede a los datos, una forma sencilla de brindar esta información es formando un grafo dirigido acíclico o árbol. El protocolo de árbol, solo permite bloquear datos de forma exclusiva, respetando las siguientes reglas:
-1. El primer bloqueo de $T_i$ , puede ser en cualquier dato. A partir de ese momento, $T_i$ puede bloquear un dato $Q$ sólo si $T_i$ tiene actualmente bloqueado al padre de $Q$.
+1. El primer bloqueo de $T_i$, puede ser en cualquier dato. A partir de ese momento, $T_i$ puede bloquear un dato $Q$ solamente si $T_i$ tiene actualmente bloqueado al padre de $Q$.
 2. Los datos pueden desbloquearse en cualquier momento.
 3. Si $T_i$ desbloqueo un dato, entonces $T_i$ no puede volver a bloquearlo nuevamente.
 
@@ -132,7 +132,7 @@ Sea $P$ un cronograma que involucra a $T_k$ y $T_j$. Se espera que haya un confl
 
 En el segundo caso $T_k$ y $T_j$ no acceden a ninguna tupla común, y sin embargo ambas transacciones están en conflicto por una tupla fantasma. Si bien este conflicto no es detectado si se realiza el control de concurrencia con granularidad de tupla, esto es un problema para el resto de métodos.
 Este problema recibe el nombre de ***fenómeno fantasma***. Para evitar este fenómeno se permite que $T_k$ impida a otras transacciones crear nuevas tuplas en la relación *cuenta* cuyo campo `nombre_sucursal` sea Concordia. Aun así, la solución más simple a este problema consiste en bloquear la relación `cuenta` en modo compartido.
-En este caso las transacciones como $T_k$ , que lean tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos correspondientes a la relación en modo compartido. Mientras que las transacciones como $T_j$, que actualicen tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos en modo exclusivo. De este modo $T_k$ y $T_j$ tendrían un conflicto en un elemento de datos real, en lugar de tenerlo en uno fantasma, con el inconveniente de que baja el grado de concurrencia, ya que se impide que dos transacciones que inserten distintas tuplas en la relación se ejecuten concurrentemente.
+En este caso las transacciones como $T_k$, que lean tuplas pertenecientes a la relación *cuentas*, tendrían que bloquear el elemento de datos correspondientes a la relación en modo compartido. Mientras que las transacciones como $T_j$, que actualicen tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos en modo exclusivo. De este modo $T_k$ y $T_j$ tendrían un conflicto en un elemento de datos real, en lugar de tenerlo en una tupla fantasma, con el inconveniente de que baja el grado de concurrencia, ya que se impide que dos transacciones que inserten distintas tuplas en la relación se ejecuten concurrentemente.
 Otra solución es utilizar el ***protocolo de bloqueo de índice***. Sea una transacción $T_i$, el protocolo opera de la siguiente manera:
 1. Toda relación debe tener al menos un índice.
 2. $T_i$ puede acceder a las tuplas de una relación únicamente después de haberlas encontrado primero a través de uno o más índices de la relación.
