--- a/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
@@ -4,7 +4,7 @@ Si $T_i$ necesita bloquear todos los registros de la base de datos, utilizar un 
 
 Cuando una transacción bloquea un nodo, ya sea en modo **S** o **X**, esto implica que la transacción bloquea también a todos sus descendientes en el mismo modo.
 Supongamos que una transacción $T_i$ bloque el nodo $F_a$ en modo compartido, implícitamente está bloqueando todos sus descendientes del mismo modo. Si la transacción $T_j$ desea bloquear alguna tupla hija de $F_a$ en modo exclusivo, se generará un conflicto.
-Para determinar si un nodo puede ser bloqueado o no $T_j$ debe recorrer el camino desde la raíz del árbol hasta el registro que desea bloquear. Si cualquier nodo en el camino está bloqueado en modo incompatible, entonces $T_j$ debe esperar. Supongamos que $T_k$ desea bloquear toda la base de datos, para hacerlo debe bloquear solamente la raíz del árbol, sin embargo, $T_k$ no tendría éxito porque $T_i$ tiene actualmente bloqueado $F_a$. Una forma más eficiente de saber si se puede bloquear un nodo de niveles superiores es a través de un nuevo modo de bloqueo denominado ***modo de bloqueo intencional***. 
+Para determinar si un nodo puede ser bloqueado o no, $T_j$ debe recorrer el camino desde la raíz del árbol hasta el registro que desea bloquear. Si cualquier nodo en el camino está bloqueado en modo incompatible, entonces $T_j$ debe esperar. Supongamos que $T_k$ desea bloquear toda la base de datos, para hacerlo debe bloquear solamente la raíz del árbol, sin embargo, $T_k$ no tendría éxito porque $T_i$ tiene actualmente bloqueado $F_a$. Una forma más eficiente de saber si se puede bloquear un nodo de niveles superiores es a través de un nuevo modo de bloqueo denominado ***modo de bloqueo intencional***. 
 Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícito en un nivel inferior del árbol. Los bloqueos intencionales se colocan en todos los ascendientes de un nodo antes de bloquearlo explícitamente, de este modo no es necesario que una transacción busque en todo el árbol para determinar si puede bloquear un nodo con éxito. Una transacción que quiera bloquear $Q$ debe recorrer el camino en el árbol desde la raíz hasta $Q$. Durante el recorrido del árbol la transacción bloquea los distintos nodos en un modo intencional.
 >[!tldr] Modos de Intensión Asociados a Estados de Bloqueo
 > Hay un modo intencional asociado al modo compartido y hay otro asociado al modo exclusivo, además de un modo de bloqueo adicional de este modo.
