--- a/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos Distribuidas.md
+++ b/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos Distribuidas.md
@@ -1,4 +1,4 @@
-Los sistemas de ***base de datos distribuidas (BDD)*** buscan la integración de diversos sistemas de gestión de bases de datos, no necesariamente homogéneos, para dar a los usuarios una visión global de la información disponible. El proceso de integración no implica la centralización de la información, sino que la información se mantiene distribuida, en diversas localidades y sistemas de de bases de datos distribuidos los cuales permiten el acceso a ella como si estuviera localizada en un solo lugar.
+Los sistemas de ***base de datos distribuidas (BDD)*** buscan la integración de diversos sistemas de gestión de bases de datos, no necesariamente homogéneos, para dar a los usuarios una visión global de la información disponible. El proceso de integración no implica la centralización de la información, sino que la información se mantiene distribuida en diversas localidades y que los sistemas de bases de datos permita el acceso a ella como si estuviera localizada en un solo lugar.
 >[!tldr] Bases de Datos Homogéneas y Heterogéneas
 >En los sistemas de ***bases de datos distribuidas homogéneas***, todos los sitios usan el mismo software de gestión, son conscientes unos de otros y cooperan en el procesamiento de solicitudes. Los sitios locales ceden parte de su autonomía para modificar esquemas o software, y deben colaborar en el intercambio de información sobre transacciones para permitir su procesamiento entre varios sitios.
 >Mientras que en las ***bases de datos distribuidas heterogéneas***, los sitios pueden usar diferentes esquemas y software de gestión. Algunos sitios pueden no conocer la existencia de otros y ofrecen cooperación limitada en el procesamiento de transacciones. Las diferencias en los esquemas complican el procesamiento de consultas, y la diversidad de software dificulta el manejo de transacciones que involucran múltiples sitios.
@@ -7,7 +7,7 @@ Considérese una relación $r$ que hay que almacenar en la base de datos. Los si
 - **Réplica**: El sistema conserva varias copias (réplicas) idénticas de la relación y guarda cada réplica en un sitio diferente.
 - **Fragmentación**. El sistema divide la relación en varios fragmentos y guarda cada fragmento en un sitio diferente.
 
-Se puede combinar ambos enfoques dividiendo las relaciones en fragmentos y teniendo distintas réplicas para cada fragmento. Esta distribución de la información permite, accesos más rápidos, mayor disponibilidad y una mayor respaldo en caso de fallas. De este modo la caída de un nodo en particular no afectaría el normal funcionamiento del sistema distribuido.
+Se puede combinar ambos enfoques dividiendo las relaciones en fragmentos y teniendo distintas réplicas para cada fragmento. Esta distribución de la información permite, accesos más rápidos, mayor disponibilidad y una mayor respaldo en caso de fallas. De este modo, la caída de un nodo en particular no afectaría el normal funcionamiento del sistema distribuido.
 Puede que ciertas unidades estén físicamente particionada en varias piezas disjuntas o inclusive que existan varias réplicas particionadas. Por lo tanto, se puede distinguir entre entidades lógicas (o global) y las distintas copias que existen del mismo en las distintas localidades.
 ### Réplica de Datos
 Cuando se replica una relación, se guarda una copia de esta en dos o más sitios. En el caso más extremo se tiene una ***réplica completa***, en la que se guarda una copia en cada sitio del sistema. Las réplicas presentan varias ventajas e inconvenientes:
@@ -53,11 +53,11 @@ El proceso antes descrito funciona bien solo en ausencia de fallos, ya que si un
 2. No puede abortarse la transacción, ya que si opto por comprometerse y las demás transacciones también se comprometieron, debe esperar que el coordinador envíe un mensaje de *commit* a todas las transacciones y de este modo hacer permanentes los cambios.
 3. No puede comprometer la transacción porque si lo hace y luego el coordinador decide abortar, la transacción habrá hecho permanentes los cambios en los datos, estos pueden ser leídos por otra transacción y producir una lectura en sucio.
 ### Compromiso en Dos Fases
-El protocolo de compromiso de dos fases (2PC) es un mecanismo utilizado en bases de datos distribuidas para asegurar la consistencia de las transacciones. Se compone de dos fases principales:
+El ***protocolo de compromiso de dos fases (2PC)*** es un mecanismo utilizado en bases de datos distribuidas para asegurar la consistencia de las transacciones. Se compone de dos fases principales:
 1. **Fase uno**: El coordinador inicia el protocolo añadiendo el registro $<Prepare \ T>$ a su bitácora y lo guarda en un almacenamiento estable, enviando un mensaje de preparación a todos las localidades participantes en la transacción $T$. Cada localidad decide si puede comprometer su parte de la transacción global:
 	- Si no puede, registra $<Not \ T>$ y responde con un mensaje de aborto.
 	- Si puede, registra $<Prepared \ T>$, guarda la información en almacenamiento estable, y responde con un mensaje de preparación.
-2. **Fase dos**: El coordinador espera las respuestas de todos las localidades o hasta que finalice el tiempo de espera. Si todas las localidades involucradas responden con un mensaje de *willing-to-commit*, el coordinador decide comprometer $T$; de lo contrario la transacción es abortada. Posteriormente, el coordinador registra $<Commit \ T>$ o $<Abort \ T>$ en su bitácora y envía un mensaje a los participantes sobre la decisión final.
+2. **Fase dos**: El coordinador espera las respuestas de todos las localidades o hasta que finalice el tiempo de espera. Si todas las localidades involucradas responden con un mensaje de *willing-to-commit*, el coordinador decide comprometer $T$; de lo contrario, la transacción es abortada. Posteriormente, el coordinador registra $<Commit \ T>$ o $<Abort \ T>$ en su bitácora y envía un mensaje a los participantes sobre la decisión final.
 
 >[!tldr] Uso de los Tiempos de Esperas (Timeout)
 >El protocolo de compromiso en dos fases no utiliza tiempos de espera mínimos al momento de procesar las transacciones, pero resulta útil su uso porque de esta forma evita bloqueos que pueden ocurrir en la versión más básica del protocolo. Además, esta técnica le permite realizar una recuperación mucho más rápida del sistema, puesto que si se supera el tiempo límite establecido el sistema pasa a un estado de recuperación, donde se bloquea la transacción hasta obtener una respuesta por parte del nodo caido.
@@ -66,8 +66,8 @@ El protocolo de compromiso de dos fases (2PC) es un mecanismo utilizado en bases
 
 El manejo de los fallos se realiza de forma diferente dependiendo del tipo de falla que ocurra. Existen tres tipos de fallas que pueden cuando se ejecuta una transacción de forma distribuida:
 - **Fallo de una localidad**: Si una localidad falla antes de enviar *vote-commited*, el coordinado asume un aborto y aborta la transacción global. Si la localidad falla después de haber enviado el mensaje, el coordinador continúa el protocolo ignorando el fallo de la localidad.
-- **Fallo del Coordinador**: Los participantes deben esperar a que el coordinador se recupere para conocer la decisión final, lo que puede introducir posibilidades de bloqueo.
-- **División de la Red**: Si el coordinador y todos los participantes están en la misma partición, el protocolo continúa normalmente. Si están en particiones diferentes, los sitios tratan el fallo del coordinador.
+- **Fallo del coordinador**: Los participantes deben esperar a que el coordinador se recupere para conocer la decisión final, lo que puede introducir posibilidades de bloqueo.
+- **División de la red**: Si el coordinador y todos los participantes están en la misma partición, el protocolo continúa normalmente. Si están en particiones diferentes, los sitios tratan el fallo del coordinador.
 
 Para la recuperación ante fallas, las bitácoras de las bases de datos distribuidas no solo deben guardar las modificaciones de los datos, sino también los mensajes que las subtransacciones envían y reciben. Estos datos agilizan el proceso de recuperación del sistema ante fallos de red o caída de nodos y ayudan en la tarea de recuperación de las ***transacciones dudosas***.
 Cuando un nodo se recupera de una falla o se reconecta luego de un tiempo de no poder acceder a otra parte de la red, tiene que averiguar qué sucedió con las transiciones que estaban activas cuando la falla o desconexión ocurrió, dicha información se encuentra en su bitácora. Gran parte de estos protocolos permiten guardar en sus bitácoras los bloqueos que posee la subtransacción $T_i$ sobre dicha localidad en particular, en este caso la estructura del registro poseerá la siguiente forma $<Prepared \ T, \ L>$, donde $L$ es la lista de todos los bloqueos que poseía la subtransacción antes de la caída.
