--- a/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
+++ b/4º Año/Bases de Datos/Unidad 12/2. Proceso de Recuperación, Concurrencia e Interbloqueo.md
@@ -37,17 +37,15 @@ Los diferentes protocolos de bloqueo mencionados en la unidad anterior se pueden
 - **Gestión distribuida de bloques**: Distribuye la función de gestor de bloqueos entre varios sitios, donde cada sitio maneja localmente las solicitudes de bloqueo y desbloqueo para los datos almacenados en ese sitio. Cuando una transacción desea bloquear un dato no replicado, envía la solicitud al gestor local del sitio correspondiente. Si el dato ya está bloqueado en un modo incompatible, la solicitud se retrasa hasta que pueda concederse. Una vez aprobada, se notifica al sitio de origen. Este esquema disminuye el cuello de botella y mantiene una implementación sencilla. Sin embargo, el manejo de interbloqueos es más complejo porque las solicitudes se gestionan en múltiples sitios, lo que puede generar interbloqueos globales que requieren algoritmos modificados para su detección y resolución.
 - **Copia principal**: Se designa una de las réplicas del dato $Q$ como copia principal de dicho dato, esta copia principal reside en un sitio único, denominado ***sitio principal*** de $Q$. Cuando una transacción necesita bloquear $Q$, solicita el bloqueo en su sitio principal, y la solicitud se gestiona de la misma manera que para datos no replicados. Esto simplifica la implementación del control de concurrencia. Sin embargo, si el sitio principal falla, el dato $Q$ se vuelve inaccesible, incluso si otras réplicas están disponibles en otros sitios.
 ### Manejo de Concurrencia en Esquemas Con Réplica
-Como ya mencionamos cuando hablamos de [[5. Recuperacion de Fallos|recuperación ante fallos]], uno de los enfoques más sencillos que se puede utilizar para mejorar la disponibilidad es utilizar un ***servidor central primario*** y un base de datos espejo la cual, en caso de que el servidor central caiga, se tomará a la copia secundaria como primaria y se redireccionará todas las peticiones a esta misma. Una alternativa más conveniente sería tener un sitio primario para cada fragmento, aumentando así la disponibilidad al máximo.
+Como ya mencionamos cuando hablamos de [[5. Gestion y Recuperacion de Fallos|recuperación ante fallos]], uno de los enfoques más sencillos que se puede utilizar para mejorar la disponibilidad es utilizar un ***servidor central primario*** y un base de datos espejo la cual, en caso de que el servidor central caiga, se tomará a la copia secundaria como primaria y se redireccionará todas las peticiones a esta misma. Una alternativa más conveniente sería tener un sitio primario para cada fragmento, aumentando así la disponibilidad al máximo.
 Dado que existe un lugar central donde se almacenan los datos, todo el control de concurrencia y la asignación de los bloqueos puede realizarse en el mismo sitio primario. Pueden existir casos extremos en los que un nodo distinto al primario esté encargado de asignar los bloqueos, tal y como se describió con anterioridad.
 >[!tldr] Control Concurrencia en Esquemas de Copia Primaria Mediante Manejo de Token
 >Una alternativa al anterior esquema propuesto es realizar el control de concurrencia mediante el intercambio de *tokens* entre los distintos nodos de la red, este esquema separa la administración de los datos de su ubicación física. Cada dato tiene tokens de lectura ($r-token$) y un único token de escritura ($w-token$). El administrador del dato posee un token que circula bajo demanda.
 >Para obtener un $r-token$, una transacción envía solicitudes a todos los nodos, estos nodos pueden responder:
->
->- ***OK*** si el nodo tiene un $r-token$ o ningún token, o si tiene un $w-token$ pero no necesita. En tal caso destruye el token de escritura para luego responder a la petición de afirmativamente.
+>- ***OK*** si el nodo tiene un $r-token$ o ningún token, o si tiene un $w-token$ pero no necesita. En tal caso destruye el token de escritura para luego responder a la petición afirmativamente.
 >- ***Deny*** si el nodo en cuestión tiene un $w-token$ y lo necesita.
 > 
 >La transacción recibe un $r-token$ y confirma la reserva si colecta $n$ confirmaciones positivas, o espera/aborta si recibe una confirmación negativa. Para obtener un $w-token$, la transacción también envía solicitudes a todos los nodos, estos nodos pueden responder:
->
 >- ***OK*** si el nodo no tiene un token, anotando una reserva, o si tiene un token, pero no lo necesita. En tal caso destruye los tokens que no utiliza y anotando una reserva. 
 >- ***Deny*** si el nodo tiene un token y lo necesita o si tiene anotado un reserva de $w-token$.
 > 
@@ -65,7 +63,7 @@ Como cada localidad maneja y gestiona sus propias réplicas se necesita mecanism
 
 Todos los enfoques anteriores se centraban en el uso de esquemas de bloqueo para manejar la concurrencia. Sin embargo, en las bases de datos distribuidas también es posible gestionar la concurrencia mediante un enfoque basado en marcas temporales o utilizando réplicas con niveles reducidos de consistencia.
 ## Resolución de Interbloqueos
-Los algoritmos de prevención y detección de interbloqueos pueden adaptarse a sistemas distribuidos, aunque requieren modificaciones. Pero dado que la prevención de interbloqueos introduce esperas y retrocesos innecesarios, además de involucrar más sitios de los necesarios en la ejecución de una transacción se suele optar por otros enfoques.
+Los algoritmos de evasión, prevención y detección de interbloqueos pueden utilizarse en sistemas distribuidos, aunque requieren modificaciones. Dado que la prevención de interbloqueos introduce esperas y retrocesos innecesarios, además de involucrar más sitios de los necesarios en la ejecución de una transacción, se suele optar por otros enfoques.
 >[!info] Prevención de Interbloqueos Utilizando Tiempos de Espera (Timeout)
 >Una de las formas más simples de prevenir interbloqueos es utilizando periodos de espera mínimos para abortar o retroceder las transacciones, en este tipo de esquemas el tiempo de espera debe ser lo suficientemente corto como para que las transacciones que están interbloqueo no retengan los bloqueos por mucho tiempo, y lo suficientemente largo como para que no se produzcan retroceso de transacciones que no están en interbloqueo.
 >Este enfoque, al contrario que el de grafos de espera no requiere del envío y recepción de mensajes, además que no suele abortar transacciones que no están en interbloqueos. La principal desventaja es que este método es propenso a abortar todas las transacciones que están en interbloqueo en lugar de solo abortar una, que por lo general suele ser suficiente para acabar con el interbloqueo.
