--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -32,9 +32,9 @@ Existen dos paradigmas principales en cuanto a la relación entre **Data Warehou
 >En situaciones reales se suele optar, en la mayoría de los casos, por paradigma bottom-up, ya que permite obtener resultados tangibles de manera más rápida. Esto se debe a que el tiempo y esfuerzos necesarios para realizar el modelado e implementación del mismo es más sencilla, dado que no es necesario adaptarse a los modelos de un almacén de datos ya existente.
 >Este enfoque permite crear nuevos data marts bajo demanda de los distintos departamentos para una posterior integración total con un almacén de datos, requiriendo una menor inversión inicial y ofreciendo una mayor flexibilidad para realizar cambios durante el desarrollo.
 
-Ambos paradigmas tienen sus ventajas y desventajas, dependiendo de las necesidades y estructura de la organización. El enfoque **Top-down** asegura mayor consistencia de los datos a nivel global, mientras que el **Bottom-up** permite una implementación más rápida en áreas específicas antes de integrar los datos a nivel organizacional.
+Ambos paradigmas tienen sus ventajas y desventajas, dependiendo de las necesidades y estructura de la organización. El enfoque **top-down** asegura mayor consistencia de los datos a nivel global, mientras que el **bottom-up** permite una implementación más rápida en áreas específicas antes de integrar los datos a nivel organizacional.
 ## Modelo Dimensional
-El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, utilizado en almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar la performance en consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen tres elementos fundamentales los cuales son:
+El ***modelo dimensional*** es un esquema de datos, que contiene la misma información que el modelo entidad-relación, pero que se utiliza para modelar almacenes de datos, con la principal diferencia que la información se almacena de manera simétrica, con el objetivo de mejorar la comprensión del usuario, optimizar la performance en consultas y brindar flexibilidad ante posibles cambios. Este tipo de esquemas poseen tres elementos fundamentales, los cuales son:
 - **Atributos**: Describen características de algo tangible, como podría ser la fecha de nacimiento o la marca. Los atributos se organizan o agrupan en dimensiones.
 - **Hechos (Facts)**: Representa a la entidad u objeto que se desea observar, como podrían ser un producto o una venta. Los hechos pueden ser numéricos o textos, los hechos numéricos pueden ser categorizados en:
 	- **Hechos aditivos**: Se pueden sumar en todas las dimensiones.
@@ -42,11 +42,11 @@ El ***modelo dimensional*** es un esquema de datos, que contiene la misma inform
 	- **Hechos no aditivos**: Son medidas de intensidad no aditivas en todas las dimensiones, son el resultado de las funciones de agregación como `AVG`.
 - **Dimensiones**: Brindan mayor contexto o perspectiva a los diferentes hechos asociados a las mismas.
 
-El principal propósito de las tablas de dimensiones es proveer mayor contexto o brindar cierta perspectiva sobre los hechos que se están analizando, por ejemplo, si se está analizando las ventas, las mismas pueden ser categorizar por cliente, producto e incluso tiempo. Como se puede observar estas tres dimensiones mencionadas en el ejemplo nos brindan un mayor contexto a la hora de interpretar los datos.
+El principal propósito de las tablas de dimensiones es proveer mayor contexto o brindar cierta perspectiva sobre los hechos que se están analizando, por ejemplo, si se está analizando las ventas, las mismas pueden ser categorizar por cliente, producto e incluso tiempo. Como se puede observar, estas tres dimensiones mencionadas en el ejemplo nos brindan un mayor contexto a la hora de interpretar los datos.
 Generalmente, las tablas dimensionales están compuestas por atributos y es bastante común que posean una sola clave primaria. Mientras que las tablas de hechos suelen caracterizarse por tener muchas claves foráneas y en ciertos casos atributos propios.
 ### Esquemas para el Modelo Dimensional
 Existen dos modelos dimensionales principales:
-- **Esquema en estrella**: Es un modelo de datos en el que una tabla central, llamada **tabla de hechos (fact table)**, almacena los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
+- **Esquema en estrella**: Es un modelo de datos en el que las tablas de hechos se ubican de forma central, almacenando los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
 - **Esquema en copo de nieve**: Es una versión más compleja del esquema en estrella, en la que las tablas de dimensiones se organizan en jerarquías, creando una estructura más detallada y normalizada. Este enfoque busca reducir la redundancia de datos, aunque a costa de una mayor complejidad en las consultas. Es útil cuando las dimensiones tienen subniveles que requieren una mayor precisión en el análisis.
 
 Ambos esquemas se utilizan en almacenes de datos para facilitar el análisis y las consultas de grandes volúmenes de información, adaptándose según las necesidades de rendimiento y flexibilidad.
