--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -12,7 +12,7 @@ Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ represen
 - `SELECT`: Lista los atributos deseados en el resultado de una consulta, corresponde a la ***proyección*** del álgebra relacional.
 	- Al contrario que en el álgebra relacional, SQL permite duplicados en las relaciones, esto es así debido a una cuestión de rendimiento y eficiencia, en caso de que deseemos eliminar duplicados debemos especificarlo explícitamente, utilizando la palabra `DISTINCT`.
 	- En caso de que se quiera seleccionar todos los atributos de los componentes de las tablas se puede usar $*$, en lugar de especificar todos los atributos de forma explícita.
-	- Al igual que en el cálculo relacional extendido, esta cláusula permite realizar operaciones aritméticas básicas entre constantes y/o distintos atributos.
+	- Al igual que en el álgebra relacional extendido, esta cláusula permite realizar operaciones aritméticas básicas entre constantes y/o distintos atributos.
 - `WHERE`: Especifica las condiciones que el resultado debe satisfacer, corresponde al ***predicado en la operación de selección*** del álgebra relacional.
 	- En esta cláusula se utilizan conectores lógicos como `and`, `or` y `not`.
 	- Permite usar operadores de comparación como >, <, =, entre otros. SQL permite utilizar estos operadores con distintos tipos de datos como cadenas de textos o incluso fechas.
@@ -48,7 +48,7 @@ SELECT DISTINCT C.nombre_cliente
 
 - **Renombramiento**: SQL proporciona un mecanismo para renombrar tanto relaciones como atributos. Para ello utiliza la cláusula `as`, con el siguiente formato `nombre_viejo as nombre_nuevo`.
 - **Operaciones sobre cadenas de texto**: El estándar de SQL define una serie de operaciones y operadores para la manipulación de cadenas, en general son las mismas que se encuentran en cualquier lenguaje de programación, con la diferencia de que dependiendo la base de datos van a variar los operadores y las formas de realizar ciertas operaciones.
-- **Operaciones de conjuntos**: Son el conjunto de operaciones definidas para los conjuntos, muchas bases de datos solo implementan las 3 operaciones básicas `UNION`, `INTERSECT` y `EXCEPT`. Las operaciones Set eliminan los duplicados, debido a que son operaciones de conjuntos.
+- **Operaciones de conjuntos**: Son el conjunto de operaciones definidas para los conjuntos, muchas bases de datos solo implementan las 3 operaciones básicas `UNION`, `INTERSECT` y `EXCEPT`. Las operaciones de conjuntos si eliminan los duplicados.
 
 >[!note] Cláusula `ALL` en las Operaciones Set
 >En caso de que se desee conservar los duplicados se debe especificar explícitamente utilizando la cláusula `ALL`, por ejemplo `UNION ALL`. 
@@ -167,7 +167,7 @@ SQL te permite borrar tuplas de las distintas tablas de una base de datos, la fo
 ```sql
 -- Borra todas las cuentas de la sucursal Centro
 DELETE FROM cuenta
-	WHERE nombre_sucursal = 'Centro'
+	WHERE nombre_sucursal = 'Centro';
 
 -- Borra todas las cuentas de la sucursales de Concoria
 DELETE FROM cuenta
