--- a/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
@@ -77,7 +77,7 @@ $$F \vdash F' = (F - \{X \rightarrow Y\}) \cup \{(X - C) \rightarrow Y\}$$
 $$F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\} \vdash F$$
 
 Dada una dependencia funcional de la forma $X \rightarrow Y$. Se puede verificar si un atributo es extraño tanto por izquierda como por derecha de la siguiente manera:
-1. Para testear si el atributo $C \in X$ es extraño en $X$, primero se calcula $(X - C)^+$ usando las dependencias del conjunto $F$, luego se chequea si esta clausura contiene a $C$, si es así $C$ es extraño en $X$.
+1. Para testear si el atributo $C \in X$ es extraño en $X$, primero se calcula $(X - C)^+$ usando las dependencias funcionales del conjunto $F$, luego se chequea si esta clausura contiene a $C$, si es así $C$ es extraño en $X$.
 2. Para testear si el atributo $C \in Y$ es extraño en $Y$, primero se calcula $X^+$ usando el siguiente conjunto $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\}$, luego se chequea si $X^+$ en $F'$ contiene a $C$, si es así, $C$ es extraño en $Y$.
 
 Una cobertura canónica para $F$ es un conjunto de dependencias $F_C$ tal que, $F \vdash F_C \land F_C \vdash F$. Además, ninguna dependencia funcional en $F_C$ contiene atributos extraños y cada lado izquierdo de las dependencias funcionales en $F_C$ es único.
