--- a/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
@@ -1,6 +1,6 @@
 El ***modelo de datos relacional orientado a objetos*** extiende el modelo de datos relacional ofreciendo un sistema de tipos más rico que incluye tipos de datos complejos y orientación a objetos. Teniendo a su vez que extender los lenguajes de consultas para permitir que estos trabajen con datos mucho más complejos.
-Los modelos de datos objeto-relacional, combinan rasgos de los modelos relacionales y de los modelos orientados a objetos más tradicionales. Cuyas principales características son las siguientes:
-- Poseen un sistema de tipos enriquecido al igual que las bases de datos orientadas a objetos, combinado con relaciones como las básicas para el almacenamiento de datos.
+Los modelos de datos objeto-relacional, combinan rasgos del modelo relacional y del modelo orientado a objetos. Cuyas principales características son las siguientes:
+- Poseen un sistema de tipos enriquecido al igual que las bases de datos orientadas a objetos, combinado con características del modelo relaciones para el almacenamiento de datos.
 - Implementa los rasgos de la orientación a objetos dentro del propio sistema de tipos de la base de datos, ya que utiliza el modelo relacional como modelo subyacente.
 
 >[!tldr] Objetos Largo (LOBs)
@@ -32,7 +32,7 @@ Al igual que en los lenguajes orientados a objetos convencionales, las funciones
 ## Tipos Estructurados Brindados por las Bases de Datos
 Muchas las bases de datos objeto-relacional brindan un conjunto de tipos compuestos básicos que facilitan la creación de modelos. Algunos de estos tipos son los siguientes:
 - `ROW`: Son el equivalente a los registros de los lenguajes de programación convencionales, estos tipos pueden utilizarse para declarar una columna de una tabla, además se pueden anidar ***rows***.
-- `REF TYPE`: Son similares a un puntero, hacen referencia un tipo estructurado. Solo se puede hacer referencia otros tipos estructurados, permitiendo la navegación entre objetos facilitando el acceso y/o actualización de objetos referenciados. Existen dos tipos de referencias las que tienen un alcance definido y aquellas sin alcance.
+- `REF TYPE`: Son similares a un puntero, hacen referencia a un tipo estructurado. Solo se puede hacer referencia otros tipos estructurados, permitiendo la navegación, acceso y actualización de  los objetos referenciados. Existen dos tipos de referencias las que tienen un alcance definido y aquellas sin alcance.
 - `VARRAY`: Son un conjunto ordenado de elementos que pueden ser accedidos a través de un índice, el tamaño de estas estructuras de datos es especificada al momento de la inicialización aunque su tamaño puede ser cambiado. Estas son almacenados como BLOB, por esta razón los ***varrays*** no pueden contener objetos que tengan como propiedad a un tipo LOB.
 - `NESTED TABLES`: Es un tipo de estructura de datos que puede contener una cantidad variable de elementos, el orden de los elementos no es mantenido. Se pueden seleccionar, insertar, borrar y modificar elementos como en cualquier tabla. Se almacenan separadamente y contiene una columna que indica la fila u objeto de la tabla padre a la que hace referencia cada objeto.
 >[!example] Colecciones Multinivel
