--- a/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
+++ b/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
@@ -11,7 +11,7 @@ Los sistemas operativos no están pensados para trabajar con bloques clavados ni
 ## Organización de los Archivos
 Las bases de datos se componen de distintos archivos, a su vez los archivos se organizan lógicamente como secuencias de registros. Estos registros se corresponden con los bloques del disco, los cuales son de un tamaño fijo y generalmente preestablecidos por el sistema operativo, en cambio, los tamaños de los registros pueden ser fijos o variables.
 En caso de que los registros sean fijos surgen una serie de problemas, supongamos que el tamaño de nuestros registros es de 40 bytes y tenemos un archivo compuesto por una gran cantidad de estos registros, en este caso surgen dos problemas:
-1. Resulta difícil borrar registros de esta estructura, ya que hay que rellenar el espacio ocupado por el registro borrado, esto implica un desplazamiento físico del archivo lo que sería muy costoso o mover el último registro del archivo al sitio donde se borró el archivo, aun así no es tan conveniente debido a que requiere más acceso a disco
+1. Resulta difícil borrar registros de esta estructura, ya que hay que rellenar el espacio ocupado por el registro borrado, esto implica un desplazamiento físico del archivo lo que sería muy costoso o mover el último registro del archivo al sitio donde se borró el archivo, aun así no es tan conveniente debido a que requiere más acceso a disco.
 2. Puede que algunos registros sobrepasen el tamaño de los bloques y, por tanto, sean almacenados en dos bloques distintos requiriendo un acceso adicional a disco.
 
 Una opción más eficiente, al primer problema es dejar el espacio del registro eliminado vacío y reutilizar esos espacios para futuras inserciones. En este caso, el archivo tendría una cabecera con un puntero al primer registro vacío, que a su vez apuntaría al siguiente espacio libre, y así sucesivamente.
