--- a/4º Año/Bases de Datos/Unidad 8/3. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/3. Indices e Indexacion.md
@@ -28,7 +28,6 @@ Generalmente, es más rápido localizar un registro si se usa un índice denso e
 Los diseñadores del sistema debe buscar un balance entre el tiempo de acceso, el espacio adicional requerido y tiempo de actualización. Si bien la decisión sobre que tipo de índices se deben utilizar depende de la aplicación en particular, una buena decisión es tener un índice disperso con una entrada del índice por cada bloque, de esta forma se minimizan los accesos a bloques mientras mantenemos el tamaño del índice tan pequeño como sea posible.
 >[!caution] Actualización y Mantención de los Índices
 >Sin importar el tipo de índice que se esté usando, los índices se deben actualizar siempre que se inserte o borre un registro del archivo, este tipo de operaciones van a realizarse o no dependiendo de si el índice es denso o disperso, por ejemplo, en el caso de los índices dispersos, no todas las operaciones de inserción y borrados actualizarán los índices.
-
 ### Índices Multinivel
 Aunque se utilicen índices dispersos, el propio índice podría ser demasiado grande para un procesamiento eficiente, si un índice es lo bastante pequeño como para guardarlo en la memoria principal, el tiempo de búsqueda para encontrar una entrada sería mucho menor. Mientras que si el índice es grande es probable que se deba guardar en disco, la eficiencia en las consultas disminuyen, ya que se deben subir y bajar bloques del archivo de índices.
 Los índices se almacenan como archivos secuenciales en disco, esto significa que buscar una entrada implicará leer varios bloques de disco. Esto empeora si se están utilizando bloques de desbordamiento, puesto que se tendría que recorrer todos los registros del archivo de forma casi obligatoria.
@@ -41,7 +40,7 @@ Los índices secundarios son aquellos cuyas clave de búsqueda especifican un or
 Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
 Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
 >[!tldr] Índices de Cobertura
->Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. El almacenamiento de valores de atributo adicionales es útil en los índices secundarios, ya que permite responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
+>Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. Este tipo de índices permiten responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
 
 Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
 ## Índices de Árbol B⁺
