--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -42,14 +42,14 @@ Los fallos producidos al momento de realizar transacciones pueden ser recuperado
 
 En las bitácoras cada vez que una transacción $T_i$ inicia se registra esta misma mediante un registro $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados por esta transacción, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción que realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados, se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
 Las modificaciones realizadas por las transacciones pueden llevarse adelante de dos maneras:
-1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución, el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución, cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida, se grabará el registro $<T_i \ Commits>$ en la bitácora.
+1. **Modificación inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución, el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución, cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida, se grabará el registro $<T_i \ Commits>$ en la bitácora.
 
 >[!tldr] Recuperación de Datos - Modificación Inmediata
 >Cuando una transacción falla en un sistema que utiliza modificación inmediata, el esquema de recuperación utiliza dos procedimientos:
 >- **undo($T_i$)**: Restaura todos los datos que $T_i$ actualizó a sus valores anteriormente, para todos los $T_i$ que no tengan el registro $<T_i \ Commits>$.
 >- **redo($T_i$)**: Asigna los nuevos valores a todos los datos que actualiza la operación $T_i$, para todos los $T_i$ que tengan el registro $<T_i \ Commits>$.
 
-2. **Modificación Diferida**: Garantiza la atomicidad de las transacciones de la base de datos, ya que graba todas las modificaciones de la base de datos en la bitácora, postergando la ejecución de todas las operaciones de escritura de una transacción hasta que el registro $<T_i \ Commits>$ esté guardado en memoria estable. Es decir, solo realiza las escritura de los datos una vez que la transacción se haya comprometido.
+2. **Modificación diferida**: Garantiza la atomicidad de las transacciones de la base de datos, ya que graba todas las modificaciones de la base de datos en la bitácora, postergando la ejecución de todas las operaciones de escritura de una transacción hasta que el registro $<T_i \ Commits>$ esté guardado en memoria estable. Es decir, solo realiza las escritura de los datos una vez que la transacción se haya comprometido.
 
 >[!tldr] Recuperación de Datos - Modificación Diferida
 > Cuando una transacción falla en un sistema que utiliza modificación en diferido, el esquema de recuperación solo utiliza un único procedimiento:
@@ -83,7 +83,7 @@ Al finalizar la transacción, la tabla de paginación actual se guarda en disco,
 ![[doble-paginación.png]]
 
 Para comprometer una transacción, se deben seguir los siguientes pasos:
-1. Asegurarse de que todas las páginas del Registro Intermedio (RI) en memoria principal que hayan sido modificadas por la transacción se graben en disco (esto no afecta a las páginas de la Tabla de Paginación doble).
+1. Asegurarse de que todas las páginas del *registro intermedio* en memoria principal que hayan sido modificadas por la transacción se graben en disco (esto no afecta a las páginas de la tabla de paginación doble).
 2. Grabar la tabla de paginación actual en el disco, sin sobrescribir su doble, ya que esta podría ser necesaria para la recuperación en caso de una caída.
 3. Grabar la dirección de la tabla de paginación actual en el disco, en la posición que anteriormente contenía la dirección de su doble.
 
